PFC-35 - Limpiar UI
Actualizada licencia y formateadas ayudas

--- a/app/src/main/assets/license.html
+++ b/app/src/main/assets/license.html
@@ -24,6 +24,8 @@
 
     <h3>INGENIERÍA TÉCNICA EN INFORMÁTICA DE SISTEMAS</h3>
 
+    <h3>Universidad de Málaga</h3>
+
     <h4>Realizado por</h4>
 
     <p>
