PFC-35 - Limpiar UI
Actualizado html de Ayuda

--- a/app/src/main/assets/help_device.html
+++ b/app/src/main/assets/help_device.html
@@ -19,32 +19,35 @@
     <h1>Ayuda de vista de Sensor</h1>
 
     <p>
-        When the view is started a <b>Service Discovery</b> is initiated. On <b>Service
-        Discovery</b>
-        completion (may take a few seconds), sensor images appear and data is displayed next to
-        them. To configure the sensors, tap the sensor to configure and an on/off button and period
-        slider will appear, tap the sensor again to exit configuration menu.
+        Cuando la vista arranca el <b>Service Discovery</b> es iniciado. Cuando se completa el
+        servicio <b>Service Discovery</b> (puede tardar unos segundos), las imágenes de los sensores
+        aparecen y su información de datos es desplegada junto a ellas.
+        Para configurar los diferentes sensores, pulsa sobre su elemento del listado y el botón de
+        encendido/apagado aparecerá junto a la barra deslizante para configurar la frecuencia de
+        actualización. Pulsa de nuevo para salir de la configuración del sensor.
     </p>
 
     <p>
-        On Android 4.3 devices there is a limitation of maximum 4 continuous notifications, Android
-        4.4 devices does not have this limitation and is able to handle a maximum of 7 continuous
-        notifications. The application will automatically enable 4 notifications on Android 4.3, the
-        sensors not enabled will be grayed out. To enable them, first tap on a sensor which is
-        enabled and then disable it, thereafter tap on the sensor you want to enable and use the
-        switch to enable it. On Android 4.4 all sensors are enabled by default.
+        En los terminales Android 4.3 existe la limitación de cuatro notificaciones simultaneas. Sin
+        embargo, los terminales Android 4.4 no tienen esta limitación y son capaces de manejar hasta
+        un máximo de siete notificaciones simultaneas.
+        La aplicación automáticamente habilitará cuatro notificaciones en Android 4.3 y los demás
+        sensores no estarán disponibles por defecto. Para activarlos, puede pulsar sobre un sensor
+        ya activado para desactivarlo y activar al que quiera acceder. En Android 4.4 todos los
+        sensores están activados por defecto.
     </p>
 
     <p>
-        The <b>Preferences</b> tab in the options menu can be used to select imperial units.
+        En la sección de <b>Configuración</b> dentro del menú de opciones puede seleccionar unidades
+        de medida imperiales si lo desea.
     </p>
 
     <p>
-        Note that height measurement (barometer) are calibrated by tapping on the barometer sensor
-        and tapping the calibrate button. The measured height shown is calculated based on the
-        difference in air pressure between the current measurement and the pressure at the moment of
-        calibration. Measurements are always calibrated on connection (but may be re-calibrated at
-        any time).
+        Tenga en cuenta que la medida del barómetro es necesario calibrarla pulsando sobre el sensor
+        del barómetro.
+        La medida es calculada en base a la diferencia de la presión del aire entre el momento de la
+        medida y el momento de la calibración. Las medidas son siempre calibradas en la conexión
+        (pero pueden ser recalibradas en cualquier momento).
     </p>
 
 </div>
