PFC-35 - Limpiar UI
  Quitadas apariencias de Texas Instruments

--- a/app/src/main/assets/help_scan.html
+++ b/app/src/main/assets/help_scan.html
@@ -22,7 +22,7 @@
         Hay que tener en cuenta que la <b>Configuración Bluetooth</b> debe estar disponible y
         activada y el protocólo Bluetooth Low Energy debe estar soportado en el terminal (la
         aplicación hace una petición para activar el Bluetooth en el arranque).
-        Los sensores <b>Texas Instruments Sensor Tag</b> arrancan con el modo 'Discovery'
+        Los sensores <b>Sensor Tag</b> arrancan con el modo 'Discovery'
         (escaneables) automáticamente. El escaneado parará cuando se cumpla algunas de las
         siguientes condiciones:
     </p>
